--- a/programs/display/login.html
+++ b/programs/display/login.html
@@ -4,22 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .login-container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 300px;
+            text-align: center;
+        }
+
+        h2 {
+            margin-bottom: 20px;
+        }
+
+        label {
+            display: block;
+            text-align: left;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+
+        input[type="email"], input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+
+        input[type="submit"] {
+            background-color: #007BFF;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            width: 100%;
+            font-size: 16px;
+        }
+
+        input[type="submit"]:hover {
+            background-color:  #007BFF;
+        }
+
+        
+
+    </style>
     <script>
         function validateForm() {
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
 
-            // Regular expression to validate the email ending with "@gmai.com"
+            // Regular expression to validate the email ending with "@gmail.com"
             const emailPattern = /^[a-zA-Z0-9._-]+@gmail\.com$/;
 
             if (!emailPattern.test(email)) {
-                alert('Email must be in the format example@gmai.com');
+                alert('Email phải đúng định dạng example@gmail.com');
                 return false;
             }
 
             // Check if the password is at least 6 characters long
             if (password.length < 6) {
-                alert('Password must be at least 6 characters long');
+                alert('Mật khẩu phải ít nhất 6 ký tự');
                 return false;
             }
 
@@ -28,13 +86,19 @@
     </script>
 </head>
 <body>
-    <h2>Login</h2>
-    <form action="/login" method="post" onsubmit="return validateForm()">
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br><br>
-        <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password" required><br><br>
-        <input type="submit" value="Login">
-    </form>
+
+    <div class="login-container">
+        <h2>Login</h2>
+        <form action="/login" method="post" onsubmit="return validateForm()">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+
+            <input type="submit" value="Login">
+        </form>
+    </div>
+
 </body>
 </html>
