--- a/programs/display/index.html
+++ b/programs/display/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Information Hiding: Steganography with JavaScript</title>
+    <title>Nhóm 4</title>
  
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -10,11 +10,14 @@
     <script src="/build/mammoth.browser.min.js"></script>
     <script src="/build/exportword.js"></script> <!-- Thư viện docx -->
    <link rel="stylesheet" href="/css/background.css">
-  
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
     <div id="main">
-        <h1>Giấu tin nhóm 4</h1>
+        <i class="fas fa-sign-out-alt logout-icon" id="logoutIcon" title="Logout"></i>
+
+        <h1></h1>
 
         <div id="left">
             <h2>Ảnh:</h2>
@@ -23,8 +26,8 @@
             <input type="file" id="textFile" accept=".txt,.docx" />
             <textarea id="text"></textarea>
             <div class="btns">
-                <span id="hide" class="btn">Nhúng</span>
-                <span id="read" class="btn">Đọc</span>
+                <button id="hide" class="btn btn-outline-primary btn-lg btn-block">Nhúng</button>
+                 <button id="read" class="btn btn-outline-primary btn-lg btn-block">Đọc</button>
             </div>
         </div>
 
@@ -41,12 +44,12 @@
                     <div class="note"></div>
                 </div>
             </div>
-            <div id="messageArea" class="invisible">
+            <div id="messageArea"  class="invisible">
                 <h2>Mã:</h2>
                 <div id="message"></div>
             </div>
             <!-- Nút tải file Word -->
-            <a id="downloadWord" style="display:none;" class="btn">Tải về Word</a>
+            <button id="downloadWord" style="display:none;" class="btn">Tải về Word</button>
         </div>
 
         <div class="clear"></div>
@@ -175,7 +178,7 @@
                 });
             }
         }
-
+       
         window.onload = function() {
             document.getElementById('file').addEventListener('change', handleFileSelect, false);
             document.getElementById('textFile').addEventListener('change', handleTextFileSelect, false);
@@ -183,6 +186,9 @@
             document.getElementById('read').addEventListener('click', read, false);
             document.getElementById('downloadWord').addEventListener('click', exportToWord, false);
             document.getElementById('text').addEventListener('keyup', updateCapacity, false);
+            document.getElementById('logoutIcon').addEventListener('click', function() {
+            window.location.href = 'login.html'; // Redirect to login.html on logout click
+        });
             updateCapacity();
         };
     </script>
