capnhatthoigian code sql

--- a/programs/display/index.html
+++ b/programs/display/index.html
@@ -18,7 +18,10 @@
         <i class="fa fa-bars"></i>
         <div class="dropdown-menu" id="dropdownMenu">
             <a href="#" class="logout-icon" id="logoutLink">
-                <i class="fas fa-sign-out-alt logout-icon" id="logoutIcon" title="Logout"></i> Logout
+                <i class="fas fa-sign-out-alt logout-icon" id="logoutIcon" title="Logout"></i> Đăng xuất      
+            </a>
+            <a href="">
+                <i class="fa-solid fa-user"></i>Thông tin tài khoản
             </a>
             
         </div>
