--- a/programs/display/login.html
+++ b/programs/display/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Đăng nhập</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -88,12 +88,12 @@
 <body>
 
     <div class="login-container">
-        <h2>Login</h2>
+        <h2>Đăng nhập</h2>
         <form action="/login" method="post" onsubmit="return validateForm()">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
 
-            <label for="password">Password:</label>
+            <label for="password">Mật khẩu:</label>
             <input type="password" id="password" name="password" required>
 
             <input type="submit" value="Login">
